--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.0.0-rc.7",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
