--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "unsplash-js": "^7.0.4"
   }
 }
