--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "emoji-mart": "^3.0.1",
     "file-saver": "^2.0.5",
-    "html2canvas": "^1.0.0-rc.7",
+    "html2canvas": "1.0.0-alpha.12",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
