--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "html2canvas": "1.0.0-alpha.12",
     "next": "10.0.7",
     "react": "17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "17.0.1",
     "react-query": "^3.13.4",
     "semantic-ui-css": "^2.4.1",
