--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-color": "^2.19.3",
     "react-dom": "17.0.1",
     "react-query": "^3.13.4",
+    "react-semantic-ui-range": "^0.7.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "unsplash-js": "^7.0.4"
