--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "17.0.1",
     "react-query": "^3.13.4",
     "react-semantic-ui-range": "^0.7.1",
+    "rgb-hex": "^3.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "unsplash-js": "^7.0.4"
